--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.15.9",
     "@astrojs/check": "^0.9.3",
+    "astro": "^4.15.9",
+    "sass": "^1.79.3",
     "typescript": "^5.6.2"
   }
 }
