--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.3",
     "astro": "^4.15.9",
+    "microcms-js-sdk": "^3.1.2",
     "sass": "^1.79.3",
     "typescript": "^5.6.2"
   },
