--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
       "@layouts/*": ["src/layouts/*"],
       "@components/*": ["src/components/*"],
       "@lib/*": ["src/lib/*"],
+      "@types/*": ["src/types/*"],
       "@assets/*": ["src/assets/*"]
     }
   }
